# sonickit

./: .gitignore  CMakeLists.txt  CMakeLists_minimal.txt  DSP_DOCUMENTATION_SUMMARY.md  README.md  README_zh.md  add_author.ps1  build.bat  build_log.txt  build_log_success.txt  build_new_modules.bat
bindings/dotnet/: Directory.Build.props  README.md
bindings/dotnet/src/SonicKit/: NativeHandle.cs  SonicKit.csproj  SonicKitInfo.cs
bindings/dotnet/src/SonicKit/Audio/: AudioClasses.cs
bindings/dotnet/src/SonicKit/Codecs/: G711Codec.cs
bindings/dotnet/src/SonicKit/Dsp/: DspClasses.cs
bindings/dotnet/src/SonicKit/Effects/: EffectsClasses.cs
bindings/dotnet/src/SonicKit/Native/: NativeMethods.cs
bindings/dotnet/tests/SonicKit.Tests/: AudioAndEffectsTests.cs  DspTests.cs  SonicKit.Tests.csproj
bindings/go/sonickit/: README.md  audio.go  audio_test.go  codec.go  dsp.go  dsp_test.go  effects.go  effects_test.go  go.mod  sonickit.go
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/examples/: basic_processing.py  effects_processing.py  voip_pipeline.py
bindings/python/sonickit/: __init__.py  __init__.pyi
bindings/python/src/: audio_bindings.cpp  bindings.cpp  codec_bindings.cpp  dsp_bindings.cpp  effects_bindings.cpp
bindings/python/tests/: conftest.py  test_audio.py  test_dsp.py  test_effects.py
cmake/: FindOpus.cmake  FindSRTP2.cmake  PlatformSetup.cmake
docs/: NEW_FEATURES.md  OPTIMIZATION.md  TRANSLATION_GUIDE.md  USER_GUIDE.md  USER_GUIDE_zh.md
examples/: CMakeLists.txt  example_capture.c  example_file_convert.c  example_playback.c  example_voicechat.c
include/audio/: audio_buffer.h  audio_level.h  audio_mixer.h  audio_quality.h  audio_recorder.h  device.h  file_io.h
include/codec/: codec.h  codec_common.h
include/dsp/: agc.h  comfort_noise.h  compressor.h  delay_estimator.h  denoiser.h  dtmf.h  echo_canceller.h  effects.h  equalizer.h  hrtf.h  resampler.h  spatial.h  time_stretcher.h  vad.h  watermark.h
include/network/: bandwidth_estimator.h  datachannel.h  ice.h  jitter_buffer.h  rtp.h  srtp.h  transport.h
include/sip/: sip_core.h  sip_ua.h
include/utils/: diagnostics.h  simd_utils.h
include/voice/: config.h  error.h  export.h  pipeline.h  platform.h  statistics.h  types.h  version.h  voice.h
scripts/: cleanup_builds.ps1  download_deps.ps1  download_deps.sh  flatten_builds.ps1  rename_project.ps1
src/audio/: audio_buffer.c  audio_level.c  audio_mixer.c  audio_quality.c  audio_recorder.c  device.c  file_io.c
src/codec/: codec.c  codec_g711.c  codec_g722.c  codec_opus.c
src/dsp/: agc.c  comfort_noise.c  compressor.c  delay_estimator.c  denoiser.c  dtmf.c  echo_canceller.c  effects.c  equalizer.c  hrtf.c  resampler.c  spatial.c  time_stretcher.c  vad.c  watermark.c
src/network/: bandwidth_estimator.c  datachannel.c  ice.c  jitter_buffer.c  rtp.c  srtp.c  transport.c
src/platform/: platform_android.c  platform_common.c  platform_ios.m
src/sip/: sip_core.c  sip_ua.c
src/utils/: diagnostics.c  simd_utils.c
src/voice/: pipeline.c  statistics.c  version.c  voice_init.c
tests/: benchmark_common.h  benchmark_dsp.c  benchmark_simd.c  test_buffer.c  test_codec.c  test_common.h  test_datachannel.c  test_diagnostics.c  test_dsp.c  test_effects.c  test_hrtf.c  test_network.c  test_new_modules.c  test_resampler.c  test_sip.c  test_spatial.c  test_watermark.c
wasm/: CMakeLists.txt  README.md  build.ps1  build.sh
wasm/api/: sonickit_api.cpp  sonickit_audio.cpp  sonickit_dsp_extended.cpp  sonickit_effects.cpp  sonickit_watermark.cpp
wasm/examples/: demo_denoiser.html
wasm/platform/: wasm_platform.c  wasm_threading.h  wasm_time.c
wasm/stubs/: device_stub.c  network_stub.c
